correção show imunização

--- a/app/views/imunizacao_solicitacaos/show.html.erb
+++ b/app/views/imunizacao_solicitacaos/show.html.erb
@@ -436,6 +436,6 @@
         </div>
         <%= f.submit "Salvar", class:"btn white-text", target:"_self" %>
       </div>
-  <% end %>
+  <% end if current_user.administrador? || current_user.admin_imuni? %>
 </div>
 
