correção show iunizacao removao anexo solicitante

--- a/app/views/imunizacao_solicitacaos/_form.html.erb
+++ b/app/views/imunizacao_solicitacaos/_form.html.erb
@@ -110,9 +110,9 @@
         </div>
       </div>
 
-      <div class="input-field">
-        <%= f.file_field :anexos, multiple: true %>
-      </div>
+<!--      <div class="input-field">-->
+        <%#= f.file_field :anexos, multiple: true %>
+<!--      </div>-->
     </div>
 
     <div class="card-panel">
