--- a/app/views/imunizacao_solicitacaos/_form.html.erb
+++ b/app/views/imunizacao_solicitacaos/_form.html.erb
@@ -196,7 +196,7 @@
     <%= f.hidden_field :municipio_atual_id%>
 
     <div class="card-panel">
-      <h4 class="header2">Observações aicionais sobre o paciente</h4>
+      <h4 class="header2">Observações adicionais sobre o paciente</h4>
       <div class="input-field">
         <%= f.text_area :observacoes, {class:"materialize-textarea"} %>
         <%= f.label :observacoes, "Observações" %>
