--- a/app/views/imunizacao_solicitacaos/_form.html.erb
+++ b/app/views/imunizacao_solicitacaos/_form.html.erb
@@ -16,52 +16,52 @@
       <h4 class="header2">Identidade do Usuário</h4>
       <div class="input-field">
 
-        <%= f.label :nome_paciente, "Nome" %>
-        <%= f.text_field :nome_paciente %>
+        <%= f.label :nome_paciente, "Nome *" %>
+        <%= f.text_field :nome_paciente, required: true %>
 
       </div>
       <div class="row">
         <div class="col s12 l6">
           <div class="">
 
-            <%= f.label :data_nascimento %>
-            <%= f.date_field :data_nascimento %>
+            <%= f.label :data_nascimento, "Data de Nascimento *" %>
+            <%= f.date_field :data_nascimento, required: true %>
 
           </div>
         </div>
         <div class="col s12 l6">
           <div class="">
-            <%= f.label :sexo %>
-            <%= f.select :sexo, ImunizacaoSolicitacao.sexo.options,{},{ class:"browser-default" }%>
+            <%= f.label :sexo, "Sexo *"%>
+            <%= f.select :sexo, ImunizacaoSolicitacao.sexo.options,{},{ class:"browser-default" , required: true}%>
           </div>
         </div>
 
       </div>
       <div class="col s12 l6">
         <div class="">
-          <%= f.label :telefone_paciente, "Telefone" %>
-          <%= f.text_field :telefone_paciente %>
+          <%= f.label :telefone_paciente, "Telefone *" %>
+          <%= f.text_field :telefone_paciente, required: true %>
         </div>
       </div>
       <div class="input-field">
-        <%= f.label :nome_mae %>
-        <%= f.text_field :nome_mae %>
+        <%= f.label :nome_mae, "Nome da Mãe *" %>
+        <%= f.text_field :nome_mae, required: true %>
       </div>
 
       <div class="row">
         <div class="col s12 m8">
           <div class="input-field">
 
-            <%= f.label :endereco %>
-            <%= f.text_area :endereco %>
+            <%= f.label :endereco, "Endereço *" %>
+            <%= f.text_area :endereco, required: true %>
 
           </div>
         </div>
         <div class="col s12 m4">
           <div class="input-field">
 
-            <%= f.label :bairro %>
-            <%= f.text_field :bairro %>
+            <%= f.label :bairro, "Bairro *" %>
+            <%= f.text_field :bairro, required: true %>
 
           </div>
         </div>
@@ -69,8 +69,8 @@
 
 
       <div class="">
-        <%= f.label :municipio_id %>
-        <%= f.select :municipio_id, Cidade.to_select,{ prompt: true},{class:"browser-default select2"}  %>
+        <%= f.label :municipio_id, "Município *" %>
+        <%= f.select :municipio_id, Cidade.to_select,{ prompt: true},{class:"browser-default select2", required: true}  %>
       </div>
     </div>
     <div class="card-panel">
@@ -79,34 +79,34 @@
       </h4>
       <div class="input-field">
 
-        <%= f.label :nome %>
-        <%= f.text_field :nome_requisitante %>
+        <%= f.label :nome, "Nome *" %>
+        <%= f.text_field :nome_requisitante, required: true %>
 
       </div>
 
       <div class="row">
         <div class="col s12 m4">
-          <%= f.label :tipo %>
-          <%= f.select :tipo_requisitante, ImunizacaoSolicitacao.tipo_requisitante.options,{},{class:"browser-default select2"} %>
+          <%= f.label :tipo, "Tipo *" %>
+          <%= f.select :tipo_requisitante, ImunizacaoSolicitacao.tipo_requisitante.options,{},{class:"browser-default select2", required: true} %>
         </div>
         <div class="col s12 m4">
-          <%= f.label :crm_coren, "CRM/COREN" %>
-          <%= f.text_field :crm_coren %>
+          <%= f.label :crm_coren, "CRM/COREN *" %>
+          <%= f.text_field :crm_coren , required: true %>
         </div>
         <div class="col s12 m4">
-          <%= f.label :telefone %>
-          <%= f.text_field :telefone_requisitante %>
+          <%= f.label :telefone, "Telefone *" %>
+          <%= f.text_field :telefone_requisitante, required: true %>
         </div>
       </div>
 
       <div class="row">
         <div class="col s12 m8">
-          <%= f.label :instituicao_requisitante, "Instituição" %>
-          <%= f.text_field :instituicao_requisitante %>
+          <%= f.label :instituicao_requisitante, "Instituição *" %>
+          <%= f.text_field :instituicao_requisitante, required: true %>
         </div>
         <div class="col s12 m4">
-          <%= f.label :municipio %>
-          <%= f.select :municipio_requisitante_id, Cidade.to_select,{ prompt: true},{class:"browser-default select2"}  %>
+          <%= f.label :municipio, "Município *" %>
+          <%= f.select :municipio_requisitante_id, Cidade.to_select,{ prompt: true},{class:"browser-default select2", required: true}  %>
         </div>
       </div>
 
@@ -204,7 +204,7 @@
     </div>
 
   <div class="card-panel">
-    <h4 class="header2">Anexos<span style="font-size: 0.8rem; color: #9e9e9e "> (Cartão de vacinas, documento pessoal, prescrição médica, relatório médico, relatório de alta)</span></h4>
+    <h4 class="header2">Anexos<span style="font-size: 0.8rem; color: #9e9e9e "> (Cartão de vacinas*, documento pessoal*, prescrição médica, relatório médico, relatório de alta, exame laboratorial ou de imagens)</span></h4>
 
     <%= f.fields_for :imunizacao_files do |i| %>
       <div class="card-panel">
