--- a/app/views/layouts/_left_sidebar_imunizacao.html.erb
+++ b/app/views/layouts/_left_sidebar_imunizacao.html.erb
@@ -40,6 +40,11 @@
           </a>
         </li>
         <li class="bold">
+          <a href="/imunizacao/imunizacao_vacinas/relatorio" class="waves-effect waves-cyan">
+            <i class="material-icons">insert_chart</i> Relatório Vacinas
+          </a>
+        </li>
+        <li class="bold">
           <a href="/usuario/users" class="waves-effect waves-cyan">
             <i class="material-icons">supervisor_account</i> Usuários
           </a>
