--- a/app/views/dant_requests/dashboard.html.erb
+++ b/app/views/dant_requests/dashboard.html.erb
@@ -43,7 +43,18 @@
     <div class="card blue-grey darken-1">
       <div class="card-content white-text">
         <span class="card-title">Hipertensos</span>
-        <h1><%= @dant_requests.sum(:qtd_hipertensos) %></h1>
+        <div class="row">
+          <div class="col s6">Cadastrados</div>
+          <div class="col s6">Atendimentos</div>
+        </div>
+        <div class="row">
+          <div class="col s6">
+            <h1><%= @dant_requests.sum(:qtd_hipertensos) %></h1>
+          </div>
+          <div class="col s6">
+            <h1><%= @dant_requests.sum(:atendimento_hipertensos) %></h1>
+          </div>
+        </div>
       </div>
 
     </div>
@@ -52,7 +63,19 @@
     <div class="card green darken-1">
       <div class="card-content white-text">
         <span class="card-title">Diabéticos</span>
-        <h1><%= @dant_requests.sum(:qtd_diabeticos) %></h1>
+        <div class="row">
+          <div class="col s6">Cadastrados</div>
+          <div class="col s6">Atendimentos</div>
+        </div>
+        <div class="row">
+          <div class="col s6">
+            <h1><%= @dant_requests.sum(:qtd_diabeticos) %></h1>
+          </div>
+          <div class="col s6">
+            <h1><%= @dant_requests.sum(:atendimento_diabeticos) %></h1>
+          </div>
+        </div>
+
       </div>
 
     </div>
@@ -61,7 +84,19 @@
     <div class="card red darken-1">
       <div class="card-content white-text">
         <span class="card-title">Diabéticos com Hipertensão</span>
-        <h1><%= @dant_requests.sum(:qtd_diabeticos_hipertencos) %></h1>
+        <div class="row">
+          <div class="col s6">Cadastrados</div>
+          <div class="col s6">Atendimentos</div>
+        </div>
+        <div class="row">
+          <div class="col s6">
+            <h1><%= @dant_requests.sum(:qtd_diabeticos_hipertencos) %></h1>
+          </div>
+          <div class="col s6">
+            <h1><%= @dant_requests.sum(:atendimento_diabeticos_hipertensos) %></h1>
+          </div>
+        </div>
+
       </div>
 
     </div>
@@ -70,7 +105,19 @@
     <div class="card blue darken-1">
       <div class="card-content white-text">
         <span class="card-title">Tabagistas</span>
-        <h1><%= @dant_requests.sum(:qtd_tabagista) %></h1>
+        <div class="row">
+          <div class="col s6">Cadastrados</div>
+          <div class="col s6">Atendimentos</div>
+        </div>
+        <div class="row">
+          <div class="col s6">
+            <h1><%= @dant_requests.sum(:qtd_tabagista) %></h1>
+          </div>
+          <div class="col s6">
+            <h1><%= @dant_requests.sum(:qtd_atendimento_tabagista) %></h1>
+          </div>
+        </div>
+
       </div>
 
     </div>
@@ -81,7 +128,19 @@
     <div class="card blue darken-1">
       <div class="card-content white-text">
         <span class="card-title">Etilistas</span>
-        <h1><%= @dant_requests.sum(:qtd_etilista) %></h1>
+        <div class="row">
+          <div class="col s6">Cadastrados</div>
+          <div class="col s6">Atendimentos</div>
+        </div>
+        <div class="row">
+          <div class="col s6">
+            <h1><%= @dant_requests.sum(:qtd_etilista) %></h1>
+          </div>
+          <div class="col s6">
+            <h1><%= @dant_requests.sum(:qtd_atendimento_etilista) %></h1>
+          </div>
+        </div>
+
       </div>
 
     </div>
@@ -90,7 +149,19 @@
     <div class="card blue darken-1">
       <div class="card-content white-text">
         <span class="card-title">Obesos</span>
+
         <h1><%= @dant_requests.sum(:qtd_obesos) %></h1>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="col s12 l3">
+    <div class="card blue darken-1">
+      <div class="card-content white-text">
+        <span class="card-title">Atividade Físicas</span>
+
+        <h1><%= @dant_requests.sum(:soma_participacoes) %></h1>
       </div>
 
     </div>
