correcao campo cidade em responsavel

--- a/app/views/dant_responsavel_programs/_form.html.erb
+++ b/app/views/dant_responsavel_programs/_form.html.erb
@@ -27,7 +27,7 @@
   </div>
 
   <div class="input">
-    <%= f.label :cargo %>
+    <%= f.label :cidade_id, "Cidade" %>
     <%= f.select :cidade_id, @cidades, {prompt: true}, {class:"browser-default select2"} %>
     
   </div>
