--- a/app/views/dant_requests/index.html.erb
+++ b/app/views/dant_requests/index.html.erb
@@ -73,6 +73,6 @@
 </div>
 
 <%= link_to '+ Cadastrar', new_dant_request_path, class:"btn" %>
-<%= link_to '+ Copiar da última solicitacao', new_dant_request_path(dup: true), class:"btn" if current_user.municipio_dant? %>
+<%#= link_to '+ Copiar da última solicitacao', new_dant_request_path(dup: true), class:"btn" if current_user.municipio_dant? %>
 
 
