--- a/app/views/dant_requests/dashboard.html.erb
+++ b/app/views/dant_requests/dashboard.html.erb
@@ -172,7 +172,7 @@
       <div class="card-content white-text">
         <span class="card-title">Obesos Grau 2</span>
 
-        <h1><%= @dant_requests.sum(:qtd_obesidade_2) %></h1>
+        <h1><%= @dant_requests.sum(:qtd_obesidate_2) %></h1>
       </div>
 
     </div>
