--- a/app/views/dst_solicitacaos/show.html.erb
+++ b/app/views/dst_solicitacaos/show.html.erb
@@ -29,7 +29,7 @@
 
   <p>
     <strong>Status:</strong>
-    <%= @dst_solicitacao.status %>
+    <%= @dst_solicitacao.status_text %>
   </p>
 
 </div>
