combo cidade registro

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -36,7 +36,7 @@
       <td><%= user.cpf %></td>
       <td><%= user.email %></td>
       <td><%= user.cidade %></td>
-      <td><%= user.role %></td>
+      <td><%= user.role_text %></td>
       <td><%= user.ativo == true ? "SIM" : "NÃO" %></td>
       <td><a class=" modal-trigger" href="#modal" onclick="set_id(<%= user.id %>,'<%= user.nome %>')">Alterar Senha</a></td>
 
