correção selects hanseniase

--- a/app/views/avaliacao_notificacaos/_form.html.erb
+++ b/app/views/avaliacao_notificacaos/_form.html.erb
@@ -95,120 +95,120 @@
             </div>
             <div class="row">
               <div class="col s12 l4 input-field">Triquíase (S/N)</div>
-              <div class="col s6 l3 input-field">
-
-                <%= esq.select :triquiase_d,["S","N"],{prompt: true} %>
+              <div class="col s6 l3 input">
                 <%= esq.label :triquiase_d, "D" %>
-              </div>
-              <div class="col s6 l3 input-field">
+                <%= esq.select :triquiase_d,["S","N"],{prompt: true}, {class:"browser-default"} %>
 
-                <%= esq.select :triquiase_e,["S","N"],{prompt: true} %>
+              </div>
+              <div class="col s6 l3 input">
                 <%= esq.label :triquiase_e, "E" %>
+                <%= esq.select :triquiase_e,["S","N"],{prompt: true}, {class:"browser-default"} %>
+
               </div>
             </div>
             <div class="row">
               <div class="col s12 l4 input-field">Ectrópio (S/N)</div>
-              <div class="col s6 l3 input-field">
-
-                <%= esq.select :ectropio_d,["S","N"],{prompt: true} %>
+              <div class="col s6 l3 input">
                 <%= esq.label :ectropio_d, "D" %>
-              </div>
-              <div class="col s6 l3 input-field">
+                <%= esq.select :ectropio_d,["S","N"],{prompt: true}, {class:"browser-default"} %>
 
-                <%= esq.select :ectropio_e,["S","N"],{prompt: true} %>
+              </div>
+              <div class="col s6 l3 input">
                 <%= esq.label :ectropio_e, "E" %>
+                <%= esq.select :ectropio_e,["S","N"],{prompt: true}, {class:"browser-default"} %>
+
               </div>
             </div>
             <div class="row">
               <div class="col s12 l4 input-field">Catarata (S/N)</div>
-              <div class="col s6 l3 input-field">
-
-                <%= esq.select :catarata_d,["S","N"],{prompt: true} %>
+              <div class="col s6 l3 input">
                 <%= esq.label :catarata_d, "D" %>
-              </div>
-              <div class="col s6 l3 input-field">
+                <%= esq.select :catarata_d,["S","N"],{prompt: true}, {class:"browser-default"} %>
 
-                <%= esq.select :catarata_e,["S","N"],{prompt: true} %>
+              </div>
+              <div class="col s6 l3 input">
                 <%= esq.label :catarata_e, "E" %>
+                <%= esq.select :catarata_e,["S","N"],{prompt: true}, {class:"browser-default"} %>
+
               </div>
             </div>
             <div class="row">
               <div class="col s12 l4 input-field">Dimin. Sensibilidade da Córnea (S/N)</div>
-              <div class="col s6 l3 input-field">
-
-                <%= esq.select :sensibilidade_cornea_d,["S","N"],{prompt: true} %>
+              <div class="col s6 l3 input">
                 <%= esq.label :sensibilidade_cornea_d, "D" %>
-              </div>
-              <div class="col s6 l3 input-field">
+                <%= esq.select :sensibilidade_cornea_d,["S","N"],{prompt: true}, {class:"browser-default"} %>
 
-                <%= esq.select :sensibilidade_cornea_e,["S","N"],{prompt: true} %>
+              </div>
+              <div class="col s6 l3 input">
                 <%= esq.label :sensibilidade_cornea_e, "E" %>
+                <%= esq.select :sensibilidade_cornea_e,["S","N"],{prompt: true}, {class:"browser-default"} %>
+
               </div>
             </div>
             <div class="row">
               <div class="col s12 l4 input-field">Opacidade Corneana Central (S/N)</div>
-              <div class="col s6 l3 input-field">
-
-                <%= esq.select :opacidade_corneana_d,["S","N"],{prompt: true} %>
+              <div class="col s6 l3 input">
                 <%= esq.label :opacidade_corneana_d, "D" %>
-              </div>
-              <div class="col s6 l3 input-field">
+                <%= esq.select :opacidade_corneana_d,["S","N"],{prompt: true}, {class:"browser-default"} %>
 
-                <%= esq.select :opacidade_corneana_e,["S","N"],{prompt: true} %>
+              </div>
+              <div class="col s6 l3 input">
                 <%= esq.label :opacidade_corneana_e, "E" %>
+                <%= esq.select :opacidade_corneana_e,["S","N"],{prompt: true}, {class:"browser-default"} %>
+
               </div>
             </div>
             <div class="row">
               <div class="col s12 l4 input-field">Acuidade Visual</div>
-              <div class="col s6 l3 input-field">
-
-                <%= esq.select :acuidade_visual_d,["0.1","0.15","0.2","0.3","0.4","0.5","0.6","0.7","0.8","0.9","1.0"],{prompt: true} %>
+              <div class="col s6 l3 input">
                 <%= esq.label :acuidade_visual_d, "D" %>
-              </div>
-              <div class="col s6 l3 input-field">
+                <%= esq.select :acuidade_visual_d,["0.1","0.15","0.2","0.3","0.4","0.5","0.6","0.7","0.8","0.9","1.0"],{prompt: true}, {class:"browser-default"} %>
 
-                <%= esq.select :acuidade_visual_e,["0.1","0.15","0.2","0.3","0.4","0.5","0.6","0.7","0.8","0.9","1.0"],{prompt: true} %>
+              </div>
+              <div class="col s6 l3 input">
                 <%= esq.label :acuidade_visual_e, "E" %>
+                <%= esq.select :acuidade_visual_e,["0.1","0.15","0.2","0.3","0.4","0.5","0.6","0.7","0.8","0.9","1.0"],{prompt: true}, {class:"browser-default"} %>
+
               </div>
             </div>
             <b>NARIZ</b><br>
             <div class="row">
               <div class="col s12 l4 input-field">Ressecamento (S/N)</div>
-              <div class="col s6 l3 input-field">
-
-                <%= esq.select :ressecamento_d,["S","N"],{prompt: true} %>
+              <div class="col s6 l3 input">
                 <%= esq.label :ressecamento_d, "D" %>
-              </div>
-              <div class="col s6 l3 input-field">
+                <%= esq.select :ressecamento_d,["S","N"],{prompt: true}, {class:"browser-default"} %>
 
-                <%= esq.select :ressecamento_e,["S","N"],{prompt: true} %>
+              </div>
+              <div class="col s6 l3 input">
                 <%= esq.label :ressecamento_e, "E" %>
+                <%= esq.select :ressecamento_e,["S","N"],{prompt: true}, {class:"browser-default"} %>
+
               </div>
             </div>
             <div class="row">
               <div class="col s12 l4 input-field">Feridas (S/N)</div>
-              <div class="col s6 l3 input-field">
-
-                <%= esq.select :feridas_d,["S","N"],{prompt: true} %>
+              <div class="col s6 l3 input">
                 <%= esq.label :feridas_d, "D" %>
-              </div>
-              <div class="col s6 l3 input-field">
+                <%= esq.select :feridas_d,["S","N"],{prompt: true}, {class:"browser-default"} %>
 
-                <%= esq.select :feridas_e,["S","N"],{prompt: true} %>
+              </div>
+              <div class="col s6 l3 input">
                 <%= esq.label :feridas_e, "E" %>
+                <%= esq.select :feridas_e,["S","N"],{prompt: true}, {class:"browser-default"} %>
+
               </div>
             </div>
             <div class="row">
               <div class="col s12 l4 input-field">Perfuração de septo (S/N)</div>
-              <div class="col s6 l3 input-field">
-
-                <%= esq.select :perfuracao_septo_d,["S","N"],{prompt: true} %>
+              <div class="col s6 l3 input">
                 <%= esq.label :perfuracao_septo_d, "D" %>
-              </div>
-              <div class="col s6 l3 input-field">
+                <%= esq.select :perfuracao_septo_d,["S","N"],{prompt: true}, {class:"browser-default"} %>
 
-                <%= esq.select :perfuracao_septo_e,["S","N"],{prompt: true} %>
+              </div>
+              <div class="col s6 l3 input">
                 <%= esq.label :perfuracao_septo_e, "E" %>
+                <%= esq.select :perfuracao_septo_e,["S","N"],{prompt: true}, {class:"browser-default"} %>
+
               </div>
             </div>
             <div class="row">
@@ -258,41 +258,41 @@
             </div>
             <div class="row">
               <div class="col s12 l4 input-field">Abdução do 5º dedo(abrir dedo mínimo)(0 a 5)</div>
-              <div class="col s6 l3 input-field">
-
-                <%= esq.select :abducao_5_dedo_d,["0","1","2","3","4","5"],{prompt: true} %>
+              <div class="col s6 l3 input">
                 <%= esq.label :abducao_5_dedo_d, "D" %>
-              </div>
-              <div class="col s6 l3 input-field">
+                <%= esq.select :abducao_5_dedo_d,["0","1","2","3","4","5"],{prompt: true}, {class:"browser-default"} %>
 
-                <%= esq.select :abducao_5_dedo_e,["0","1","2","3","4","5"],{prompt: true} %>
+              </div>
+              <div class="col s6 l3 input">
                 <%= esq.label :abducao_5_dedo_e, "E" %>
+                <%= esq.select :abducao_5_dedo_e,["0","1","2","3","4","5"],{prompt: true}, {class:"browser-default"} %>
+
               </div>
             </div>
             <div class="row">
               <div class="col s12 l4 input-field">Abdução do polegar(elevar o polegar)(0 a 5)</div>
-              <div class="col s6 l3 input-field">
-
-                <%= esq.select :abducao_polegar_d,["0","1","2","3","4","5"],{prompt: true} %>
+              <div class="col s6 l3 input">
                 <%= esq.label :abducao_polegar_d, "D" %>
-              </div>
-              <div class="col s6 l3 input-field">
+                <%= esq.select :abducao_polegar_d,["0","1","2","3","4","5"],{prompt: true}, {class:"browser-default"} %>
 
-                <%= esq.select :abducao_polegar_e,["0","1","2","3","4","5"],{prompt: true} %>
+              </div>
+              <div class="col s6 l3 input">
                 <%= esq.label :abducao_polegar_e, "E" %>
+                <%= esq.select :abducao_polegar_e,["0","1","2","3","4","5"],{prompt: true}, {class:"browser-default"} %>
+
               </div>
             </div>
             <div class="row">
               <div class="col s12 l4 input-field">Extensores do punho(levantar punho)(0 a 5)</div>
-              <div class="col s6 l3 input-field">
-
-                <%= esq.select :extensores_punho_d,["0","1","2","3","4","5"],{prompt: true} %>
+              <div class="col s6 l3 input">
                 <%= esq.label :extensores_punho_d, "D" %>
-              </div>
-              <div class="col s6 l3 input-field">
+                <%= esq.select :extensores_punho_d,["0","1","2","3","4","5"],{prompt: true}, {class:"browser-default"} %>
 
-                <%= esq.select :extensores_punho_e,["0","1","2","3","4","5"],{prompt: true} %>
+              </div>
+              <div class="col s6 l3 input">
                 <%= esq.label :extensores_punho_e, "E" %>
+                <%= esq.select :extensores_punho_e,["0","1","2","3","4","5"],{prompt: true}, {class:"browser-default"} %>
+
               </div>
             </div>
             <b>MEMBROS INFERIORES</b><br>
@@ -324,28 +324,28 @@
             </div>
             <div class="row">
               <div class="col s12 l4 input-field">Extensão Hálux(levantar levantar dedão p/ cima)(0 a 5)</div>
-              <div class="col s6 l3 input-field">
-
-                <%= esq.select :extensao_halux_d,["0","1","2","3","4","5"],{prompt: true} %>
+              <div class="col s6 l3 input">
                 <%= esq.label :extensao_halux_d, "D" %>
-              </div>
-              <div class="col s6 l3 input-field">
+                <%= esq.select :extensao_halux_d,["0","1","2","3","4","5"],{prompt: true}, {class:"browser-default"} %>
 
-                <%= esq.select :extensao_halux_e,["0","1","2","3","4","5"],{prompt: true} %>
+              </div>
+              <div class="col s6 l3 input">
                 <%= esq.label :extensao_halux_e, "E" %>
+                <%= esq.select :extensao_halux_e,["0","1","2","3","4","5"],{prompt: true}, {class:"browser-default"} %>
+
               </div>
             </div>
             <div class="row">
               <div class="col s12 l4 input-field">Dorsiflexão do pé(puxar pé p/ si)(0 a 5)</div>
-              <div class="col s6 l3 input-field">
-
-                <%= esq.select :dorsiflexao_pe_d,["0","1","2","3","4","5"],{prompt: true} %>
+              <div class="col s6 l3 input">
                 <%= esq.label :dorsiflexao_pe_d, "D" %>
-              </div>
-              <div class="col s6 l3 input-field">
+                <%= esq.select :dorsiflexao_pe_d,["0","1","2","3","4","5"],{prompt: true}, {class:"browser-default"} %>
 
-                <%= esq.select :dorsiflexao_pe_e,["0","1","2","3","4","5"],{prompt: true} %>
+              </div>
+              <div class="col s6 l3 input">
                 <%= esq.label :dorsiflexao_pe_e, "E" %>
+                <%= esq.select :dorsiflexao_pe_e,["0","1","2","3","4","5"],{prompt: true}, {class:"browser-default"} %>
+
               </div>
             </div>
             <div class="row">
@@ -542,4 +542,72 @@
           return false;
       }
   })
+</script>
+
+<script type="text/javascript">
+    $(document).on('nested:fieldAdded', function(event){
+        console.log("nestede_addedd");
+        // this field was just inserted into your form
+        var field = event.field;
+        // it's a jQuery object already! Now you can find date input
+        //var dateField = field.find('.datetimepicker');
+        //var chosenField = field.find('.chosen-select');
+        // and activate datepicker on it
+        //dateField.datetimepicker();
+        $(".chosen-select").chosen();
+        $('.datetimepicker').datetimepicker({
+            format:'d/m/Y H:i',
+            step:5,
+            i18n:{
+                "pt-BR":{
+                    months:[
+                        'Janeiro','Fevereiro','Março','Abril',
+                        'Maio','Junho','Julho','Agosto',
+                        'Setembro','Outubro','Novembro','Dezembro',
+                    ],
+                    dayOfWeek:[
+                        "Dom", "Seg", "Ter", "Qua",
+                        "Qui", "Sex", "Sab",
+                    ]
+                }
+            }
+        });
+        $('.datepicker').datetimepicker({
+            format:'d/m/Y',
+            step:5,
+            i18n:{
+                "pt-BR":{
+                    months:[
+                        'Janeiro','Fevereiro','Março','Abril',
+                        'Maio','Junho','Julho','Agosto',
+                        'Setembro','Outubro','Novembro','Dezembro',
+                    ],
+                    dayOfWeek:[
+                        "Dom", "Seg", "Ter", "Qua",
+                        "Qui", "Sex", "Sab",
+                    ]
+                }
+            }
+        });
+        $.datetimepicker.setLocale('pt-BR');
+        //chosenField.chosen();
+        $('select').select();
+        $('.select2').select2();
+        // $('.datepicker').pickadate({
+        //     selectMonths: true, // Creates a dropdown to control month
+        //     selectYears: 100, // Creates a dropdown of 15 years to control year,
+        //     today: 'Hoje',
+        //     clear: 'Limpar',
+        //     close: 'Ok',
+        //     closeOnSelect: true // Close upon selecting a date,
+        // });
+        $(".nedc").on("keydown", function(e)
+        {
+
+            if(e.keyCode != 8 && e.keyCode != 68 && e.keyCode != 37 && e.keyCode != 39 && e.keyCode != 78 && e.keyCode != 69&& e.keyCode != 67&& e.keyCode != 46 ) {
+                return false;
+            }
+        })
+    });
+
 </script>
