--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -371,6 +371,7 @@ Scripts
   $(document).ready(function(){
       $(".chosen-select").chosen();
       $('.select2').select2();
+      //$('select').formSelect();
       $('.modal').modal();
   });
 
