--- a/app/views/dst_movimentacaos/index.html.erb
+++ b/app/views/dst_movimentacaos/index.html.erb
@@ -1,3 +1,4 @@
+<h1 class="center-align">Movimentações</h1>
 <div class="card">
   <div class="card-content">
     <span class="card-title grey-text text-darken-4" onclick="toogle_div('#pesquisa')">
@@ -29,8 +30,6 @@
     <th>Tipo</th>
     <th>Categoria</th>
     <th>Quantidade</th>
-    <th>Lote</th>
-    <th>Local</th>
   </tr>
   </thead>
 
@@ -53,12 +52,6 @@
 
         <td><%= dst_movimentacao.quantidade %></td>
 
-
-
-        <td><%= dst_movimentacao.dst_lote %></td>
-
-
-        <td><%= dst_movimentacao.dst_local %></td>
 
 
       </tr>
