--- a/app/views/layouts/_left_sidebar_dst.html.erb
+++ b/app/views/layouts/_left_sidebar_dst.html.erb
@@ -33,11 +33,11 @@
             <i class="material-icons">compare_arrows</i> Movimentação
           </a>
         </li>
-        <li class="bold">
-          <a href="/dst/dst_lotes" class="waves-effect waves-cyan">
-            <i class="material-icons">style</i> Lotes
-          </a>
-        </li>
+<!--        <li class="bold">-->
+<!--          <a href="/dst/dst_lotes" class="waves-effect waves-cyan">-->
+<!--            <i class="material-icons">style</i> Lotes-->
+<!--          </a>-->
+<!--        </li>-->
       <% end %>
       <li class="bold">
         <a href="/dst/dst_solicitacaos" class="waves-effect waves-cyan">
