--- a/app/views/dst_locals/index.html.erb
+++ b/app/views/dst_locals/index.html.erb
@@ -1,4 +1,5 @@
-<div class="card">  
+<h1 class="center-align">Estoque</h1>
+<div class="card">
   <div class="card-content">
     <span class="card-title grey-text text-darken-4" onclick="toogle_div('#pesquisa')">
       Pesquisa
