--- a/app/views/dst_locals/show.html.erb
+++ b/app/views/dst_locals/show.html.erb
@@ -1,3 +1,4 @@
+<h1 class="center-align">Estoque</h1>
 <div class="card-panel">
 
   <p>
@@ -6,13 +7,8 @@
   </p>
 
   <p>
-    <strong>Descricao:</strong>
+    <strong>Descrição:</strong>
     <%= @dst_local.descricao %>
-  </p>
-
-  <p>
-    <strong>Cidade:</strong>
-    <%= @dst_local.cidade %>
   </p>
 
   <p>
