--- a/app/views/dst_movimentacaos/edit.html.erb
+++ b/app/views/dst_movimentacaos/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="card-panel center">
-	<h4>Formulário de Edição</h4>
+	<h4>Formulário de Edição - Movimentação</h4>
 </div>
 
 <%= render 'form', dst_movimentacao: @dst_movimentacao %>
