--- a/app/views/dst_movimentacaos/new.html.erb
+++ b/app/views/dst_movimentacaos/new.html.erb
@@ -1,5 +1,5 @@
 <div class="card-panel center">
-	<h4>Formulário de Cadastro</h4>
+	<h4>Formulário de Cadastro - Movimentação</h4>
 </div>
 
 <%= render 'form', dst_movimentacao: @dst_movimentacao %>
