--- a/app/views/dant_requests/dashboard.html.erb
+++ b/app/views/dant_requests/dashboard.html.erb
@@ -8,32 +8,32 @@
     </span>
     <div id="pesquisa" class="not-show">
       <%= search_form_for @q, url: request.env['PATH_INFO'] do |f|  %>
-          <div class="row">
-            <div class="col l3 s12">
-              <%= f.label "Mês" %>
-              <%= f.select :mes_eq, [["MARÇO" , 3],["JUNHO" , 6],["SETEMBRO" , 9],["DEZEMBRO" , 12]], {prompt: "Todos os Meses"} %>
+        <div class="row">
+          <div class="col l3 s12">
+            <%= f.label "Mês" %>
+            <%= f.select :mes_eq, [["MARÇO" , 3],["JUNHO" , 6],["SETEMBRO" , 9],["DEZEMBRO" , 12]], {prompt: "Todos os Meses"} %>
 
-            </div>
-
-            <div class="col l3 s12">
-              <%= f.label "Ano" %>
-              <%= f.select :ano_eq, DantRequest.distinct.pluck(:ano),{prompt: "Todos os Anos"} %>
-
-            </div>
-            <div class="col l3 s12">
-              <%= f.label "Município" %>
-              <%= f.select :cidade_id_eq, @cidades,{prompt: "Todo o Estado",include_blank: true},{class:"browser-default chosen-select"} %>
-
-            </div>
-            <div class="col l3 s12">
-              <%= f.label "Região" %>
-              <%= f.select :dant_region_id_eq, @regioes,{prompt: "Todas as Regiões", include_blank: true},{class:"browser-default chosen-select"} %>
-
-            </div>
           </div>
-          <%# f.text_field :name_cont, placeholder: "Pesquisar..." %>
-          <%= f.submit "Filtrar", class:"btn" %>
-          <%= link_to "Limpar", dant_requests_path , class:"btn red" %>
+
+          <div class="col l3 s12">
+            <%= f.label "Ano" %>
+            <%= f.select :ano_eq, DantRequest.distinct.pluck(:ano),{prompt: "Todos os Anos"} %>
+
+          </div>
+          <div class="col l3 s12">
+            <%= f.label "Município" %>
+            <%= f.select :cidade_id_eq, @cidades,{prompt: "Todo o Estado",include_blank: true},{class:"browser-default chosen-select"} %>
+
+          </div>
+          <div class="col l3 s12">
+            <%= f.label "Região" %>
+            <%= f.select :dant_region_id_eq, @regioes,{prompt: "Todas as Regiões", include_blank: true},{class:"browser-default chosen-select"} %>
+
+          </div>
+        </div>
+        <%# f.text_field :name_cont, placeholder: "Pesquisar..." %>
+        <%= f.submit "Filtrar", class:"btn" %>
+        <%= link_to "Limpar", dashboard_dant_requests_path , class:"btn red" %>
       <% end %>
     </div>
   </div>
@@ -201,4 +201,330 @@
   </div>
 
 
+</div>
+
+<div class="row">
+  <div class="card-panel">
+    <strong>Planilha por faixa etária e sexo para registro de hipertensos cadastrados</strong>
+    <table>
+      <thead>
+      <tr>
+        <th>Sexo</th>
+        <th> < 1</th>
+        <th>01 a 04</th>
+        <th>05 a 09</th>
+        <th>10 a 14</th>
+        <th>15 a 19</th>
+        <th>20 a 29</th>
+        <th>30 a 39</th>
+        <th>40 a 49</th>
+        <th>50 a 59</th>
+        <th>60 a 69</th>
+        <th>70 a 79</th>
+        <th>80+</th>
+
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>Masculino</td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_m_1)}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_m_1_4)}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_m_5_9)}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_m_10_14)}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_m_15_19)}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_m_20_29)}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_m_30_39)}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_m_40_49 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_m_50_59 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_m_60_69 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_m_70_79 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_m_80 )}.sum%></td>
+
+      </tr>
+      <tr>
+        <td>Feminino</td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_f_1)}.sum  %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_f_1_4)}.sum  %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_f_5_9) }.sum  %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_f_10_14)}.sum  %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_f_15_19) }.sum  %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_f_20_29)}.sum  %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_f_30_39) }.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_f_40_49) }.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_f_50_59) }.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_f_60_69)}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_f_70_79)}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:hipertenso_f_80)}.sum%></td>
+
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="card-panel">
+    <strong>Planilha por faixa etária e sexo para registro de diabéticos cadastrados</strong>
+    <table>
+      <thead>
+      <tr>
+        <th>Sexo</th>
+        <th> < 1</th>
+        <th>01 a 04</th>
+        <th>05 a 09</th>
+        <th>10 a 14</th>
+        <th>15 a 19</th>
+        <th>20 a 29</th>
+        <th>30 a 39</th>
+        <th>40 a 49</th>
+        <th>50 a 59</th>
+        <th>60 a 69</th>
+        <th>70 a 79</th>
+        <th>80+</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>Masculino</td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_m_1 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_m_1_4 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_m_5_9 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_m_10_14 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_m_15_19 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_m_20_29 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_m_30_39 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_m_40_49 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_m_50_59)}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_m_60_69 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_m_70_79 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_m_90 )}.sum%></td>
+      </tr>
+      <tr>
+        <td>Feminino</td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_f_1 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_f_1_4 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_f_5_9 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_f_10_14)}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_f_15_19)}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_f_20_29 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_f_30_39 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_f_40_49 ,)}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_f_50_59 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_f_60_69 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_f_70_79 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_f_80 )}.sum%></td>
+
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="card-panel">
+    <strong>Planilha por faixa etária e sexo para registro de diabéticos com hipertensão cadastrados</strong>
+    <table>
+      <thead>
+      <tr>
+        <th>Sexo</th>
+        <th> < 1</th>
+        <th>01 a 04</th>
+        <th>05 a 09</th>
+        <th>10 a 14</th>
+        <th>15 a 19</th>
+        <th>20 a 29</th>
+        <th>30 a 39</th>
+        <th>40 a 49</th>
+        <th>50 a 59</th>
+        <th>60 a 69</th>
+        <th>70 a 79</th>
+        <th>80+</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>Masculino</td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_m_1)}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_m_1_4 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_m_5_9 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_m_10_14 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_m_15_19 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_m_20_29 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_m_30_39 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_m_40_49 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_m_50_59 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_m_60_69 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_m_70_79 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_m_80 )}.sum %></td>
+      </tr>
+      <tr>
+        <td>Feminino</td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_f_1 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_f_1_4)}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_f_5_9 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_f_10_14)}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_f_15_19 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_f_20_29 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_f_30_39 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_f_40_49 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_f_50_59 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_f_60_69 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_f_70_79 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:diabetico_hipertenso_f_80 )}.sum %></td>
+
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="card-panel">
+    <strong>Planilha por faixa etária e sexo para registro de obesos cadastrados</strong>
+    <table>
+      <thead>
+      <tr>
+        <th>Sexo</th>
+        <th> < 1</th>
+        <th>01 a 04</th>
+        <th>05 a 09</th>
+        <th>10 a 14</th>
+        <th>15 a 19</th>
+        <th>20 a 29</th>
+        <th>30 a 39</th>
+        <th>40 a 49</th>
+        <th>50 a 59</th>
+        <th>60 a 69</th>
+        <th>70 a 79</th>
+        <th>80+</th>
+
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>Masculino</td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_m_1 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_m_1_4 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_m_5_9 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_m_10_14 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_m_15_19 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_m_20_29 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_m_30_39 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_m_40_49 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_m_50_59 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_m_60_69 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_m_70_79 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_m_80 )}.sum %></td>
+
+      </tr>
+      <tr>
+        <td>Feminino</td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_f_1 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_f_1_4 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_f_5_9 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_f_10_14 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_f_15_19 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_f_20_29 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_f_30_39 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_f_40_49 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_f_50_59 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_f_60_69 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_f_70_79 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:obeso_f_80 )}.sum%></td>
+
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="card-panel">
+    <strong>Planilha por faixa etária e sexo para registro de tabagismo cadastrados</strong>
+    <table>
+      <thead>
+      <tr>
+        <th>Sexo</th>
+        <th>01 a 08</th>
+        <th>09 a 11</th>
+        <th>12 a 17</th>
+        <th>18 a 24</th>
+        <th>25 a 34</th>
+        <th>35 a 44</th>
+        <th>45 a 54</th>
+        <th>55 a 64 </th>
+        <th> >=65 </th>
+
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>Masculino</td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:tabagismo_m_1_8 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:tabagismo_m_9_11 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:tabagismo_m_12_17 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:tabagismo_m_18_24 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:tabagismo_m_25_34 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:tabagismo_m_35_44 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:tabagismo_m_45_54 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:tabagismo_m_55_64 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:tabagismo_m_65 )}.sum %></td>
+
+      </tr>
+      <tr>
+        <td>Feminino</td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:tabagismo_f_1_8 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:tabagismo_f_9_11 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:tabagismo_f_12_17 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:tabagismo_f_18_24 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:tabagismo_f_25_34 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:tabagismo_f_35_44 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:tabagismo_f_45_54 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:tabagismo_f_55_64 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:tabagismo_f_65 )}.sum%></td>
+
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="card-panel">
+    <strong>Planilha por faixa etária e sexo para registro de etilismo cadastrados</strong>
+    <table>
+      <thead>
+      <tr>
+        <th>Sexo</th>
+        <th>01 a 08</th>
+        <th>09 a 11</th>
+        <th>12 a 17</th>
+        <th>18 a 24</th>
+        <th>25 a 34</th>
+        <th>35 a 44</th>
+        <th>45 a 54</th>
+        <th>55 a 64 </th>
+        <th> >=65 </th>
+
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>Masculino</td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:etilismo_m_1_8 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:etilismo_m_9_11 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:etilismo_m_12_17 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:etilismo_m_18_24 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:etilismo_m_25_34 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:etilismo_m_35_44 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:etilismo_m_45_54 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:etilismo_m_55_64 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:etilismo_m_65 )}.sum %></td>
+
+      </tr>
+      <tr>
+        <td>Feminino</td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:etilismo_f_1_8 )}.sum %></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:etilismo_f_9_11 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:etilismo_f_12_17 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:etilismo_f_18_24 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:etilismo_f_25_34 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:etilismo_f_35_44 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:etilismo_f_45_54 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:etilismo_f_55_64 )}.sum%></td>
+        <td><%= @dant_requests.map{|a| a.dant_faixa_etarias.sum(:etilismo_f_65 )}.sum%></td>
+
+      </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
