dant, endereço paciente obrigatório

--- a/app/views/dant_pacients/_form.html.erb
+++ b/app/views/dant_pacients/_form.html.erb
@@ -36,7 +36,7 @@
   <div class="input-field">
 
     <%= f.label :endereco %>
-    <%= f.text_field :endereco %>
+    <%= f.text_field :endereco, required: true %>
     
   </div>
 
