correção campo quantidade

--- a/app/views/dst_movimentacaos/_form.html.erb
+++ b/app/views/dst_movimentacaos/_form.html.erb
@@ -36,7 +36,7 @@
 
       <div>
         <%= f.label :quantidade %>
-        <%= f.text_field :quantidade %>
+        <%= f.number_field :quantidade, step: 1 %>
       </div>
 
       <div>
