corrige menu hanseniase

--- a/app/views/layouts/_left_sidebar_default.html.erb
+++ b/app/views/layouts/_left_sidebar_default.html.erb
@@ -18,7 +18,7 @@
           </div>
         </li>
 
-        <% if current_user.administrador? %>
+        <% if current_user.administrador?  || current_user.admin_hans? %>
         <li class="bold">
           <a href="/notificacaos/home" class="waves-effect waves-cyan">
             <i class="fa fa-home"></i> Início
@@ -55,7 +55,7 @@
             <i class="fa fa-list"></i> Escala de Participação
           </a>
         </li>
-        <% if current_user.administrador?  %>
+        <% if current_user.administrador? || current_user.admin_hans?  %>
             <li class="bold">
               <a href="/ocupacaos" class="waves-effect waves-cyan">
                 <i class="fa fa-briefcase"></i> Ocupações
