refactor: altera a forma de cálculo das doses nas solicitações da DANT e corrige link do cadastro em imunização

--- a/app/views/imunizacao_solicitacaos/index.html.erb
+++ b/app/views/imunizacao_solicitacaos/index.html.erb
@@ -54,4 +54,4 @@
   <%= paginate(@imunizacao_solicitacaos)  %>
 </div>
 
-<%= link_to '+ Cadastrar', new_imunizacao_solicitacao_path, class:"btn" %>
+<%= link_to '+ Cadastrar', new_imunizacao_solicitacao_path, class:"btn", target: "_self" %>
